# CellularAutomataCustom

./: .gitignore
Cellular Automata Custom Build/Cellular Automata Custom_Data/: app.info  globalgamemanagers  globalgamemanagers.assets  level0  resources.assets  sharedassets0.assets  sharedassets0.assets.resS
Cellular Automata Custom_Data/Resources/: unity_builtin_extra
CellularAutomataCustom/: Button.cpp  Button.h  CMakeLists.txt  Cell.cpp  Cell.h  Input.cpp  Input.h  Main.cpp  Main.h  Math.h  Rule.cpp  Rule.h  RuleInterface.cpp  RuleInterface.h  RuleSerializer.cpp  RuleSerializer.h  SceneManager.cpp  SceneManager.h  ScrollBar.cpp  ScrollBar.h  StaticNamespaces.cpp  StaticNamespaces.h  TileArray.cpp  TileArray.h  TileScene2D.cpp  TileScene2D.h  TreatYourself.bat
CellularAutomataCustom/Release/save/: ruleset1.txt  ruleset2.txt  ruleset3.txt  ruleset4.txt
CellularAutomataCustom/save/: ruleset1.txt
Unity/CellularAutomataCustom/: Assembly-CSharp.csproj  CellularAutomataCustom.sln  Sirenix.OdinInspector.CompatibilityLayer.Editor.csproj  Sirenix.OdinInspector.CompatibilityLayer.csproj
Unity/CellularAutomataCustom/Assets/: IStartManager.cs
Unity/CellularAutomataCustom/Assets/Data/Scenes/: SampleScene.unity
Unity/CellularAutomataCustom/Assets/Data/ScriptableObjects/Rulesets/: Ruleset0.asset  Ruleset_BriansBrain.asset  Ruleset_GameOfLife.asset  Ruleset_Highlife.asset  Ruleset_LifeWithoutDeath.asset  Ruleset_Seeds.asset  Ruleset_StarWars.asset  Ruleset_Test.asset  Ruleset_Test0.asset  (+3 more)
Unity/CellularAutomataCustom/Assets/Data/prefabs/: Cell.prefab  btn_prefab.prefab  colorbtn_prefab.prefab  colorsquare_prefab.prefab  rule_prefab.prefab  txt_prefab.prefab
Unity/CellularAutomataCustom/Assets/Scenes/: SampleScene.unity
Unity/CellularAutomataCustom/Assets/materials/: MAT_Grid.mat
Unity/CellularAutomataCustom/Assets/src/: CAColor.cs  CAMath.cs  CellGrid.cs  CellGridBehavior.cs  ColorList.cs  EditorUtils.cs  GameObjectUtility.cs  GlobalColorBehavior.cs  IStart.cs  Rule.cs  RuleBehavior.cs  RuleData.cs  RuleDataList.cs  RulesetBehavior.cs  RulesetList.cs  SaveLoadManager.cs  TileBehavior.cs  TileGridBehavior.cs  TutorialManager.cs  TutorialStateCheck.cs  WindowManager.cs
Unity/CellularAutomataCustom/Assets/src/ScriptableObjects/: RulesetSO.cs
Unity/CellularAutomataCustom/Assets/src/ui/: CAButton.cs  CAGlobalColorSelectorButton.cs  TutorialStageBehavior.cs
Unity/CellularAutomataCustom/ProjectSettings/: DynamicsManager.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset
(+15 files in other folders)
